<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notification Log</string>
    //test-native-ad-- ca-app-pub-3940256099942544/2247696110

    //My-native-ad-id--ca-app-pub-8081344892743036/1416909324
    //My-App-Ad-ID--ca-app-pub-8081344892743036~8262343723
    //TEST-VIDEO-NATIVE-- ca-app-pub-3940256099942544/1044960115

    <string name="admob_native_id" translatable="false">ca-app-pub-6778147776084460~5125951012</string>
    <string name="ad_native_unit_id" translatable="false">ca-app-pub-6778147776084460/6838397011</string>

    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="banner_home_footer">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="interstitial_full_screen">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="rewarded_video">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>

    <!--facebook ads-->
    <string name="fb_banner_ad" translatable="false">IMG_16_9_APP_INSTALL#913703148991807_1280088249019960</string>
    <string name="fb_native_ad" translatable="false">IMG_16_9_APP_INSTALL#913703148991807_913704952324960</string>
    <string name="fb_interstitial_ad" translatable="false">IMG_16_9_APP_INSTALL#913703148991807_1280089689019816</string>
    <string name="fb_medium_ad" translatable="false">IMG_16_9_APP_INSTALL#913703148991807_1280090645686387</string>
    <string name="fb_native_banner_ad" translatable="false">IMG_16_9_APP_INSTALL#913703148991807_1280092799019505</string>

    <!--  <string name="google_app_id">1:1035726540825:android:244f8790b64bd594</string>
    <string name="google_api_key">AIzaSyA4S-oSfR23fqIGotIUWii-4sVEhMoS_cs</string>-->
    <!-- Activities -->
    <string name="activity_browse">Notifications</string>
    <string name="activity_details">Details</string>
    <string name="settings_browse_summary_singular" translatable="false">%1$d notification</string>
    <string name="settings_browse_summary_plural" translatable="false">%1$d notifications</string>
    <!-- Menu -->
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_export">Export</string>

    <!-- Settings categories -->
    <string name="category_settings">Settings</string>
    <string name="category_actions">Actions</string>

    <!-- Status -->
    <string name="settings_status">Status</string>
    <string name="settings_notification_access_unknown">Unknown</string>
    <string name="settings_notification_access_enabled">Enabled</string>
    <string name="settings_notification_access_disabled">Disabled — Click here to enable</string>

    <!-- Browse -->
    <string name="settings_browse">Browse All Notifications</string>
    <string name="settings_browse_summary" translatable="false">Click here to see the most recent notifications.</string>

    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="hello_world" tools:ignore="MissingTranslation">Hello world!</string>
    <string name="favorites">Favorites</string>

    <string name="opennotifwid">Notifications</string>
    <string name="add_widget_QR">Add widget</string>
    <!-- Notifications logged -->
    <string name="settings_entries">Notifications logged</string>

    <!-- Log text -->
    <string name="settings_text">Log text</string>
    <string name="settings_text_summary">Log the actual content of the notifications. Increases the size of the log file but allows you to read past messages.</string>

    //Main
    <string name="main_browseapp">Browse Notifications</string>
    <string name="main_browsedecription">Browse Notification Apps Wise</string>
    <string name="main_exportlog">Export Logs</string>
    <string name="main_expotdescription">Export Your Logs</string>
    <string name="main_tutorial">Tutorial</string>
    <string name="main_tutorialdes">Learn How To Use App</string>
    <string name="main_fav">Favorite</string>
    <string name="main_favdes">Your Favorite Notification Are Here</string>
    <string name="shareapp">Share App</string>
    <string name="sharedes">Share App With Friends And Family</string>

    //WElcome

    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">GOT IT</string>

    <string name="slide_1_title" translatable="false">Welcome !</string>
    <string name="slide_1_desc" translatable="false">Get All Your Notifications On One Platform!</string>

    <string name="slide_2_title" translatable="false">Secure</string>
    <string name="slide_2_desc" translatable="false">Your Privacy Is Our Main Moto, Manage Notification Securely</string>

    <string name="slide_3_title" translatable="false">Easy To Use</string>
    <string name="slide_3_desc" translatable="false">Manage All Your Notification and Its Settings Easily</string>

    <string name="slide_4_title" translatable="false">All New UI</string>
    <string name="slide_4_desc" translatable="false">Now Enjoy The App With All New Features And User Interface In This Beta Version</string>

    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again" translatable="false">Play Again</string>

    //Settings Activity

    <string name="settings_notificaton">Notifications</string>
    <string name="settings">Settings</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_changelan">Language</string>
    <string name="settings_beta">Beta tester</string>
    <string name="settings_updates">Updates</string>
    <string name="settings_promocheck">Log Ongoing</string>
    <string name="settings_aboutus">About Us</string>
    <string name="settings_privacy">Privacy Policy</string>
    <string name="settings_tnc">Terms And Conditions</string>
    <string name="settings_notica">Notice</string>
    <string name="settings_logout">Log Out</string>

    <string name="about_us">At Xenon Studio, we believe everyone deserves to have a safe, secure and useful app.
        Innovation and simplicity makes us happy: our goal is to make AI reach every user, with the help of AI every user can feel his/her life easy.
        We Have partnered with Uptodown App Studio To make Amazing Notification App, where user can easily manage there phones notification
    App Developed By Xenon Studio,

    App Managed By UptoDown Apps Studio
        For More - www.xenonstudio.in/notificationlog</string>

    <!-- Log ongoing -->
    <string name="settings_ongoing">Log ongoing</string>
    <string name="settings_ongoing_summary">Log ongoing notifications, for example download progresses. Creates a large number of additional log entries.</string>

    <!-- Export -->
    <string name="snackbar_export">Exporting… please wait…</string>

    <!-- Delete -->
    <string name="dialog_delete_header">Confirm deletion</string>
    <string name="dialog_delete_text">Do you really want to delete the log file? This cannot be undone.</string>
    <string name="dialog_delete_yes">Delete</string>
    <string name="dialog_delete_no">Cancel</string>

    <!-- Version -->
    <string name="settings_version">Version</string>

    <!-- Details -->
    <string name="details_error">Unable to load the details of this entry.</string>
    <string name="empty_log_file">No notifications logged yet!</string>
    <string name="open_notification_settings">Notification Settings</string>

    <!-- Delete Notification -->
    <string name="delete_dialog_title" translatable="false">Delete notification</string>
    <string name="delete_dialog_text" translatable="false">Do you really want to delete this notification? This cannot be undone.</string>
    <string name="delete_dialog_yes" translatable="false">Delete</string>
    <string name="delete_dialog_no" translatable="false">Cancel</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_selected_notif">SelectedNotifActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>



    <string name="send_sug">Send Suggestions</string>
    <string name="help">Help</string>
    <string name="faqs">FAQs</string>

    <string name="heldet">Please Enter Details</string>

    <string name="paymentpromt">Query Type</string>

    <string name="report">Report Issue</string>
    <string name="settings_data">Help Us Improve App</string>

    <string name="settings_datamore">Allow The App To Send Anonymous Usage Of Data</string>
    <string name="title_activity_new_main">Notifications</string>
    <string-array name="Query">
        <item>General Query</item>
        <item>Technical Query</item>
        <item>Other Query</item>

    </string-array>
</resources>
