<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:appcompat="http://schemas.android.com/tools">


    <!-- <item
         android:id="@+id/menu_search"
         android:title="Search"
         android:hint="Search Your Query"
         android:icon="@drawable/ic_search_black_24dp"
         appcompat:actionViewClass="android.support.v7.widget.SearchView"
         appcompat:showAsAction="always"
         app:showAsAction="always|collapseActionView" />-->


    <!-- <item

         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         app:showAsAction="always"   android:title="Settings"/>-->


    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/backup_restore"
        android:title="Backup/Restore"
        android:orderInCategory="100"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/backup"
                android:title="Backup"
                app:showAsAction="never"/>
            <item
                android:id="@+id/restore"
                android:title="Restore"
                app:showAsAction="never"/>

        </menu>
    </item>

    <!-- <item
         android:id="@+id/menu_privacy"
         android:title="@string/shareapp"
         app:showAsAction="never" />-->
    <!-- <item
         android:id="@+id/menu_help"
         android:title="@string/help"
         app:showAsAction="never" />-->
    <item
        android:id="@+id/action_red"
        android:orderInCategory="100"
        android:title="More"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu_sug"
                android:title="@string/send_sug"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_info"
                android:title="Info"
                app:showAsAction="never" />

            <item
                android:id="@+id/report"
                android:title="@string/report"
                app:showAsAction="never" />


        </menu>


    </item>

    <item
        android:id="@+id/faqs"
        android:title="@string/faqs"
        app:showAsAction="never" />

</menu>