<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcompat="http://schemas.android.com/tools"
   >

  <!--  <item
        android:title="Search"
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"/>
-->
    <item
        android:id="@+id/menu_search"
        android:title="Search"
        android:hint="Search Your Query"
        android:icon="@drawable/ic_search_black_24dp"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="never"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="never" />

  <item
      android:id="@+id/menu_delete"
      android:title="@string/menu_delete"
      app:showAsAction="never" />

  <item
      android:id="@+id/menu_export"
      android:title="@string/menu_export"
      app:showAsAction="never" />

    <item
        android:id="@+id/menu_help_browse"
        android:title="Help"
        android:icon="@drawable/ic_live_help_black_24dp"
        app:showAsAction="never" />


</menu>