<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/mainback"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.MainActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <fragment
        android:id="@+id/fra"
        android:name="com.appnotification.notificationhistorylog.ui.SettingsFragment"
        android:tag=".ui.SettingsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:id="@+id/versioncode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/fra"
            android:gravity="center"
            android:text="v" />

        <!--<androidx.cardview.widget.CardView
            android:id="@+id/cd_fav"
            android:layout_below="@+id/fra"
             android:layout_width="match_parent"
            android:layout_height="50dp">-->

        <RelativeLayout

            android:visibility="gone"
            android:id="@+id/notiflogg" android:layout_marginTop="9dp"
            android:layout_below="@+id/fra"
            android:layout_marginLeft="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/logll"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <TextView
                    android:id="@+id/logtextno"
                    android:layout_width="wrap_content"
                    android:textColor="@color/titilewhite"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/settings_entries"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/logtext"
                android:textColor="@color/titilewhite"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="" />


        </RelativeLayout>


        <RelativeLayout

            android:visibility="visible"
            android:id="@+id/seletcapps" android:layout_marginTop="9dp"
            android:layout_below="@+id/fra"
            android:layout_marginLeft="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/slecll"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <TextView
                    android:id="@+id/xhyv"
                    android:layout_width="wrap_content"
                    android:textColor="@color/titilewhite"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/main_browseapp"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:textColor="@color/titilewhite"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/main_browsedecription" />


        </RelativeLayout>

        <RelativeLayout

            android:id="@+id/favrl" android:layout_marginTop="9dp"
           android:layout_below="@+id/fra"
            android:layout_marginLeft="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fav"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <TextView
                    android:id="@+id/txtnotification"
                    android:layout_width="wrap_content"
                    android:textColor="@color/titilewhite"
                     android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/main_exportlog"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:textColor="@color/titilewhite"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/main_expotdescription" />


</RelativeLayout>

        <RelativeLayout
            android:id="@+id/tiprl"
            android:layout_marginTop="9dp"
             android:layout_below="@+id/favrl"
            android:layout_marginLeft="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/rltip"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/txttip"
                    android:textColor="@color/titilewhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/main_tutorial"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="12dp"
                android:textColor="@color/titilewhite"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/main_tutorialdes" />



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tpfav" android:layout_marginTop="9dp"
            android:layout_below="@+id/tiprl"
            android:layout_marginLeft="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llfav"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/txtde"
                    android:textColor="@color/titilewhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/main_fav"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:textColor="@color/titilewhite"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/main_favdes" />



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sharerl" android:layout_marginTop="9dp"
            android:layout_below="@+id/tpfav"
            android:layout_marginLeft="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/rlshare"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:textColor="@color/titilewhite"
                    android:id="@+id/txtshare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/shareapp"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:textColor="@color/titilewhite"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/sharedes" />

        </RelativeLayout>


       <!-- </androidx.cardview.widget.CardView>
-->
        <LinearLayout
            android:id="@+id/fb_container"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            />


    </LinearLayout>
    </ScrollView>

</RelativeLayout>